test/expected/test_shlexer.sh_2af44d06fc137a77bc230be86376ccad23a2806b.out
    \
err ^ -- invalid escape
split-error: invalid escape
split:
  0 ^ -- \
